force-app/main/default/objects/Testcase__c/Testcase__c.object-meta.xml
<CustomObject>
    <label>テストケース</label>
    <nameField>
        <displayFormat>tc-{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>テストケースID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>