force-app/main/default/objects/Testcase__c/fields/actualResult__c.field-meta.xml
<CustomField>
    <fullName>actualResult__c</fullName>
    <inlineHelpText>応答時間なども記載</inlineHelpText>
    <label>実際の結果</label>
    <length>150</length>
    <type>Text</type>
</CustomField>