force-app/main/default/objects/Testcase__c/fields/contents__c.field-meta.xml
<CustomField>
    <fullName>contents__c</fullName>
    <label>内容と手順</label>
    <type>TextArea</type>
</CustomField>