force-app/main/default/objects/Testcase__c/fields/evidenceFile__c.field-meta.xml
<CustomField>
    <fullName>evidenceFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エビデンスの添付</label>
    <type>Checkbox</type>
</CustomField>