force-app/main/default/objects/Testcase__c/fields/executionDate__c.field-meta.xml
<CustomField>
    <fullName>executionDate__c</fullName>
    <label>テスト日時</label>
    <type>DateTime</type>
</CustomField>