force-app/main/default/objects/Testcase__c/fields/expectedResult__c.field-meta.xml
<CustomField>
    <fullName>expectedResult__c</fullName>
    <label>期待される結果</label>
    <type>TextArea</type>
</CustomField>