force-app/main/default/objects/Testcase__c/fields/prerequisites__c.field-meta.xml
<CustomField>
    <fullName>prerequisites__c</fullName>
    <label>前提条件</label>
    <type>TextArea</type>
</CustomField>