force-app/main/default/objects/Testcase__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Yet</fullName>
                <default>true</default>
                <label>Yet</label>
            </value>
            <value>
                <fullName>Untested</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>