force-app/main/default/objects/Testcase__c/fields/subtitle__c.field-meta.xml
<CustomField>
    <fullName>subtitle__c</fullName>
    <label>ケース要約</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>