force-app/main/default/objects/Testcase__c/fields/testData__c.field-meta.xml
<CustomField>
    <fullName>testData__c</fullName>
    <inlineHelpText>ファイル or URL or 匿名APEXコード</inlineHelpText>
    <label>テストデータ</label>
    <type>TextArea</type>
</CustomField>