force-app/main/default/objects/Testcase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>status__c</columns>
    <columns>subtitle__c</columns>
    <columns>testData__c</columns>
    <columns>executionDate__c</columns>
    <columns>actualResult__c</columns>
    <columns>evidenceFile__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>